usr/local/pproxy/setup/iptables-rules
# Generated by iptables-save v1.4.21 on Thu Apr  7 09:08:13 2016
*filter
:INPUT ACCEPT [85197:30013475]
:FORWARD ACCEPT [69338:22478647]
:OUTPUT ACCEPT [65633:31846345]
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 993 -j ACCEPT
-A INPUT -p udp -m udp --dport 993 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 993 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 1194 -j ACCEPT
COMMIT
# Completed on Thu Apr  7 09:08:13 2016
# Generated by iptables-save v1.4.21 on Thu Apr  7 09:08:13 2016
*nat
:PREROUTING ACCEPT [33721:7250910]
#for ziproxy transparent proxy
-A PREROUTING -i tun+ -p tcp --dport 80 -j REDIRECT --to-port 8080
:INPUT ACCEPT [27737:6779910]
:OUTPUT ACCEPT [2019:128015]
:POSTROUTING ACCEPT [2018:127962]
-A POSTROUTING -s 10.8.0.0/24 -j SNAT --to-source 192.168.1.87
-A POSTROUTING -s 10.8.0.0/24 -j SNAT --to-source 192.168.1.87
-A POSTROUTING -s 10.8.0.0/24 -j SNAT --to-source 192.168.1.87
-A POSTROUTING -s 10.8.0.0/24 -j SNAT --to-source 192.168.1.87
-A POSTROUTING -s 10.8.0.0/24 -j SNAT --to-source 192.168.1.87
-A POSTROUTING -s 10.8.0.0/24 -j SNAT --to-source 192.168.1.87
-A POSTROUTING -s 10.8.0.0/24 -j SNAT --to-source 192.168.1.87
-A POSTROUTING -s 10.8.0.0/24 -j SNAT --to-source 192.168.1.87
COMMIT
# Completed on Thu Apr  7 09:08:13 2016
